parser.output
   0  $accept : %entry% $end

   1  main : LET IDENT EQUAL seq END
   2       | seq END

   3  seq : term
   4      | seq SEQ term

   5  term : funcTerm
   6       | appTerm funcTerm

   7  appTerm : elemTerm
   8          | appTerm elemTerm

   9  funcTerm : elemTerm
  10           | LAMBDA IDENT COLON typeTerm DOT term
  11           | LET IDENT EQUAL term IN term
  12           | IF term THEN term ELSE term
  13           | SUCC term
  14           | PRED term
  15           | ISZERO term

  16  elemTerm : IDENT
  17           | LPAR seq RPAR
  18           | TRUE
  19           | FALSE
  20           | ZERO
  21           | UNIT

  22  typeTerm : typeTermElem ARROW typeTerm
  23           | typeTermElem

  24  typeTermElem : BOOL
  25               | UNIT
  26               | NAT
  27               | LPAR typeTerm RPAR

  28  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (28)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 5
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	main  goto 15
	seq  goto 16
	term  goto 17
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	funcTerm : LAMBDA . IDENT COLON typeTerm DOT term  (10)

	IDENT  shift 21
	.  error


state 4
	elemTerm : IDENT .  (16)

	.  reduce 16


state 5
	main : LET . IDENT EQUAL seq END  (1)
	funcTerm : LET . IDENT EQUAL term IN term  (11)

	IDENT  shift 22
	.  error


state 6
	elemTerm : LPAR . seq RPAR  (17)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	seq  goto 24
	term  goto 17
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 7
	funcTerm : IF . term THEN term ELSE term  (12)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 25
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 8
	elemTerm : TRUE .  (18)

	.  reduce 18


state 9
	elemTerm : FALSE .  (19)

	.  reduce 19


state 10
	elemTerm : UNIT .  (21)

	.  reduce 21


state 11
	elemTerm : ZERO .  (20)

	.  reduce 20


state 12
	funcTerm : SUCC . term  (13)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 26
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 13
	funcTerm : PRED . term  (14)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 27
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 14
	funcTerm : ISZERO . term  (15)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 28
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 15
	%entry% : '\001' main .  (28)

	.  reduce 28


state 16
	main : seq . END  (2)
	seq : seq . SEQ term  (4)

	END  shift 29
	SEQ  shift 30
	.  error


state 17
	seq : term .  (3)

	.  reduce 3


state 18
	term : funcTerm .  (5)

	.  reduce 5


state 19
	term : appTerm . funcTerm  (6)
	appTerm : appTerm . elemTerm  (8)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	funcTerm  goto 31
	elemTerm  goto 32


state 20
	appTerm : elemTerm .  (7)
	funcTerm : elemTerm .  (9)

	END  reduce 9
	LAMBDA  reduce 7
	IDENT  reduce 7
	LET  reduce 7
	IN  reduce 9
	SEQ  reduce 9
	LPAR  reduce 7
	RPAR  reduce 9
	IF  reduce 7
	THEN  reduce 9
	ELSE  reduce 9
	TRUE  reduce 7
	FALSE  reduce 7
	UNIT  reduce 7
	ZERO  reduce 7
	SUCC  reduce 7
	PRED  reduce 7
	ISZERO  reduce 7


state 21
	funcTerm : LAMBDA IDENT . COLON typeTerm DOT term  (10)

	COLON  shift 33
	.  error


state 22
	main : LET IDENT . EQUAL seq END  (1)
	funcTerm : LET IDENT . EQUAL term IN term  (11)

	EQUAL  shift 34
	.  error


state 23
	funcTerm : LET . IDENT EQUAL term IN term  (11)

	IDENT  shift 35
	.  error


state 24
	seq : seq . SEQ term  (4)
	elemTerm : LPAR seq . RPAR  (17)

	SEQ  shift 30
	RPAR  shift 36
	.  error


state 25
	funcTerm : IF term . THEN term ELSE term  (12)

	THEN  shift 37
	.  error


state 26
	funcTerm : SUCC term .  (13)

	.  reduce 13


state 27
	funcTerm : PRED term .  (14)

	.  reduce 14


state 28
	funcTerm : ISZERO term .  (15)

	.  reduce 15


state 29
	main : seq END .  (2)

	.  reduce 2


state 30
	seq : seq SEQ . term  (4)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 38
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 31
	term : appTerm funcTerm .  (6)

	.  reduce 6


state 32
	appTerm : appTerm elemTerm .  (8)
	funcTerm : elemTerm .  (9)

	END  reduce 9
	LAMBDA  reduce 8
	IDENT  reduce 8
	LET  reduce 8
	IN  reduce 9
	SEQ  reduce 9
	LPAR  reduce 8
	RPAR  reduce 9
	IF  reduce 8
	THEN  reduce 9
	ELSE  reduce 9
	TRUE  reduce 8
	FALSE  reduce 8
	UNIT  reduce 8
	ZERO  reduce 8
	SUCC  reduce 8
	PRED  reduce 8
	ISZERO  reduce 8


state 33
	funcTerm : LAMBDA IDENT COLON . typeTerm DOT term  (10)

	LPAR  shift 39
	UNIT  shift 40
	BOOL  shift 41
	NAT  shift 42
	.  error

	typeTerm  goto 43
	typeTermElem  goto 44


state 34
	main : LET IDENT EQUAL . seq END  (1)
	funcTerm : LET IDENT EQUAL . term IN term  (11)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	seq  goto 45
	term  goto 46
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 35
	funcTerm : LET IDENT . EQUAL term IN term  (11)

	EQUAL  shift 47
	.  error


state 36
	elemTerm : LPAR seq RPAR .  (17)

	.  reduce 17


state 37
	funcTerm : IF term THEN . term ELSE term  (12)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 48
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 38
	seq : seq SEQ term .  (4)

	.  reduce 4


state 39
	typeTermElem : LPAR . typeTerm RPAR  (27)

	LPAR  shift 39
	UNIT  shift 40
	BOOL  shift 41
	NAT  shift 42
	.  error

	typeTerm  goto 49
	typeTermElem  goto 44


state 40
	typeTermElem : UNIT .  (25)

	.  reduce 25


state 41
	typeTermElem : BOOL .  (24)

	.  reduce 24


state 42
	typeTermElem : NAT .  (26)

	.  reduce 26


state 43
	funcTerm : LAMBDA IDENT COLON typeTerm . DOT term  (10)

	DOT  shift 50
	.  error


state 44
	typeTerm : typeTermElem . ARROW typeTerm  (22)
	typeTerm : typeTermElem .  (23)

	ARROW  shift 51
	DOT  reduce 23
	RPAR  reduce 23


state 45
	main : LET IDENT EQUAL seq . END  (1)
	seq : seq . SEQ term  (4)

	END  shift 52
	SEQ  shift 30
	.  error


state 46
	seq : term .  (3)
	funcTerm : LET IDENT EQUAL term . IN term  (11)

	IN  shift 53
	END  reduce 3
	SEQ  reduce 3


state 47
	funcTerm : LET IDENT EQUAL . term IN term  (11)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 54
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 48
	funcTerm : IF term THEN term . ELSE term  (12)

	ELSE  shift 55
	.  error


state 49
	typeTermElem : LPAR typeTerm . RPAR  (27)

	RPAR  shift 56
	.  error


state 50
	funcTerm : LAMBDA IDENT COLON typeTerm DOT . term  (10)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 57
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 51
	typeTerm : typeTermElem ARROW . typeTerm  (22)

	LPAR  shift 39
	UNIT  shift 40
	BOOL  shift 41
	NAT  shift 42
	.  error

	typeTerm  goto 58
	typeTermElem  goto 44


state 52
	main : LET IDENT EQUAL seq END .  (1)

	.  reduce 1


state 53
	funcTerm : LET IDENT EQUAL term IN . term  (11)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 59
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 54
	funcTerm : LET IDENT EQUAL term . IN term  (11)

	IN  shift 53
	.  error


state 55
	funcTerm : IF term THEN term ELSE . term  (12)

	LAMBDA  shift 3
	IDENT  shift 4
	LET  shift 23
	LPAR  shift 6
	IF  shift 7
	TRUE  shift 8
	FALSE  shift 9
	UNIT  shift 10
	ZERO  shift 11
	SUCC  shift 12
	PRED  shift 13
	ISZERO  shift 14
	.  error

	term  goto 60
	funcTerm  goto 18
	appTerm  goto 19
	elemTerm  goto 20


state 56
	typeTermElem : LPAR typeTerm RPAR .  (27)

	.  reduce 27


state 57
	funcTerm : LAMBDA IDENT COLON typeTerm DOT term .  (10)

	.  reduce 10


state 58
	typeTerm : typeTermElem ARROW typeTerm .  (22)

	.  reduce 22


state 59
	funcTerm : LET IDENT EQUAL term IN term .  (11)

	.  reduce 11


state 60
	funcTerm : IF term THEN term ELSE term .  (12)

	.  reduce 12


31 terminals, 10 nonterminals
29 grammar rules, 61 states
